--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     ],
     "skipLibCheck": true,
     "rootDir": "src/",
-    "outDir": "lib/"
+    "outDir": "lib/",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "typings/"
   },
   "include": [
     "src/"
