--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "equatorial-energia",
-  "description": "",
+  "description": "Um modulo TypeScript que permite interagir facilmente com a API Equatorial Energia",
   "version": "0.1.0",
-  "main": "lib/client.js",
+  "main": "lib/",
+  "module": "lib/",
   "license": "Apache-2.0",
   "author": "Elizandro Dantas",
   "scripts": {
@@ -17,12 +18,12 @@
     "url": "git+https://github.com/elizandrodantas/equatorial-energia.git"
   },
   "keywords": [
-    "whatsapp",
-    "whatsapp-web",
+    "equatorial",
+    "energia",
     "api",
-    "bot",
-    "client",
-    "node"
+    "equatorial-energia",
+    "equatorial-api",
+    "equatorial-energia-api"
   ],
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -38,6 +39,11 @@
     "typescript": "^4.8.4",
     "vitest": "^0.23.4"
   },
+  "bugs": {
+    "url": "https://github.com/elizandrodantas/equatorial-energia/issues"
+  },
+  "types": "typings/",
+  "homepage": "https://github.com/elizandrodantas/equatorial-energia#readme",
   "dependencies": {
     "axios": "^0.27.2",
     "cpf-cnpj-validator": "^1.0.3",
