changed timeout in vite test and remove Strict Property Initialization in ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "ES2022"
     ],
     "moduleResolution": "node",
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "rootDir": "src/",
     "outDir": "lib/",
